--- a/sections/icon-bar.liquid
+++ b/sections/icon-bar.liquid
@@ -1,265 +1,227 @@
-{% comment %}
-** Icon bar for footer - static **
-- Static section
-- Uses blocks
-{% endcomment %}
+{{ 'section-multicolumn.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" href="{{ 'component-slider.css' | asset_url }}" media="print" onload="this.media='all'">
+<noscript>{{ 'component-slider.css' | asset_url | stylesheet_tag }}</noscript>
 
-{% assign id = section.id %}
-{% comment %}Colors{% endcomment %}
-{% assign background = section.settings.background %}
-{% assign link = section.settings.link_color %}
-{% assign link_hover = section.settings.link_hover_color %}
-{% assign text = section.settings.text_color %}
-{% comment %} Advanced {% endcomment %}
-{% assign width = section.settings.width %}
-{% assign css_class = section.settings.css_class %}
-{% assign custom_css = section.settings.custom_css %}
-
-{% comment %} Is the color set to transparent? {% endcomment %}
-{% assign background_alpha = background | color_extract: 'alpha' %}
-{% assign link_alpha = link | color_extract: 'alpha' %}
-{% assign link_hover_alpha = link_hover | color_extract: 'alpha' %}
-{% assign text_alpha = text | color_extract: 'alpha' %}
-
-{% comment %} Section specific CSS {% endcomment %}
-{% capture section_css -%}
-
-  a.icon-bar__block {
-    color: {%- if link_alpha != 0 -%}{{ link }}{%- endif -%};
-  }
-
-  a.icon-bar__block:hover {
-    color: {%- if link_hover_alpha != 0 -%}{{ link_hover }}{%- endif -%};
-  }
-
-  .icon-bar__block {
-    color: {%- if text_alpha != 0 -%}{{ text }}{%- endif -%};
-  }
-{%- endcapture -%}
-
-{% style %}
-  #shopify-section-{{ id }} {
-    background-color: {%- if background_alpha != 0 -%}{{ background }}{%- endif -%};
-    {% if width == 'wide' %}
-      width: 100%;
-    {% endif %}
-  }
-
-  {% render 'css-loop',
-          css: section_css,
-          id: id
-  %}
-  {% render 'css-loop',
-          css: custom_css,
-          id: id
-  %}
-{% endstyle %}
-
-{% comment %} HTML markup {% endcomment %}
-{% if section.settings.show_icon_bar and section.blocks.size > 0 %}
-  <section class="section
-                  has-padding-top
-                  has-padding-bottom
-                  is-width-{{ width }}
-                  {{ css_class }}">
-    <div class="container is-justify-{{ section.settings.alignment }}">
-      {% for block in section.blocks %}
-
-        {% assign icon = block.settings.icon | downcase %}
-
-        {% if block.settings.link %}
-          <a href="{{ block.settings.link }}" class="icon-bar__block is-{{ section.settings.size }} is-flex is-align-center is-flex-{{ section.settings.icon_position }}" {{ block.shopify_attributes }}>
-        {% else %}
-          <div class="icon-bar__block is-{{ section.settings.size }} is-flex is-align-center is-flex-{{ section.settings.icon_position }}" {{ block.shopify_attributes }}>
-        {% endif %}
-            {% if icon != blank %}
-              {% render 'my-theme-icons', name: icon %}
-            {% endif %}
-            {% if block.settings.text != blank %}
-              <p class="icon-bar__text {% if section.settings.icon_position == 'column' %} text-align-center {% endif %}">{{ block.settings.text }}</p>
-            {% endif %}
-          {% if block.settings.link %}
-            </a>
-          {% else %}
-            </div>
-          {% endif %}
-      {% endfor %}
+<div class="multicolumn background-{{ section.settings.background_style }}{% if section.settings.title == blank %} no-heading{% endif %}">
+  <div class="page-width">
+    <div class="title-wrapper-with-link title-wrapper--self-padded-mobile{% if section.settings.title == blank %} title-wrapper-with-link--no-heading{% endif %}">
+      <h2 class="title">
+        {{ section.settings.title | escape }}
+      </h2>
+      {%- if section.settings.button_label != blank and section.settings.swipe_on_mobile -%}
+        <a href="{{ section.settings.button_link }}" class="link underlined-link large-up-hide">{{ section.settings.button_label | escape }}</a>
+      {%- endif -%}
     </div>
-  </section>
-{% endif %}
+    <slider-component class="slider-mobile-gutter">
+      <ul class="multicolumn-list grid grid--1-col{% if section.blocks.size > 3 and section.settings.image_width != 'full' %} grid--2-col-tablet grid--4-col-desktop{% elsif section.blocks.size > 3 and section.settings.image_width == 'full' %} grid--2-col-tablet{% else %} grid--3-col-tablet{% endif %}{% if section.settings.swipe_on_mobile and section.blocks.size > 1 %} slider slider--mobile grid--peek{% endif %}"
+        id="Slider-{{ section.id }}"
+        role="list"
+      >
+        {%- liquid
+          assign highest_ratio = 0
+          for block in section.blocks
+            if block.settings.image.aspect_ratio > highest_ratio
+              assign highest_ratio = block.settings.image.aspect_ratio
+            endif
+          endfor
+        -%}
+        {%- for block in section.blocks -%}
+          <li class="multicolumn-list__item grid__item{% if section.settings.swipe_on_mobile %} slider__slide{% endif %}{% if section.settings.column_alignment == 'center' %} center{% endif %}">
+            <div class="multicolumn-card">
+              {%- if block.settings.icon_label != blank -%}
+                {% if section.settings.image_ratio == 'adapt' or section.settings.image_ratio == 'circle' %}
+                  {% assign spaced_image = true %}
+                {% endif %}
+                <div class="multicolumn-card__image-wrapper multicolumn-card__image-wrapper--{{ section.settings.image_width }}-width{% if section.settings.image_width != 'full' or spaced_image %} multicolumn-card-spacing{% endif %}">
+                    {% render 'my-theme-icons', name: block.settings.icon_label %}
+                </div>
+              {%- endif -%}
+              <div class="multicolumn-card__info">
+                {%- if block.settings.title != blank -%}
+                  <h3>{{ block.settings.title | escape }}</h3>
+                {%- endif -%}
+                {%- if block.settings.text != blank -%}
+                  <div class="rte">{{ block.settings.text }}</div>
+                {%- endif -%}
+              </div>
+            </div>
+          </li>
+        {%- endfor -%}
+      </ul>
+
+      {%- if section.settings.swipe_on_mobile -%}
+        <div class="slider-buttons no-js-hidden medium-hide{% if section.blocks.size < 2 %} small-hide{% endif %}">
+          <div class="slider-counter caption">
+            <span class="slider-counter--current">1</span>
+            <span aria-hidden="true"> / </span>
+            <span class="visually-hidden">{{ 'accessibility.of' | t }}</span>
+            <span class="slider-counter--total">{{ section.blocks.size }}</span>
+          </div>
+          <button type="button" class="slider-button slider-button--prev" name="previous" aria-label="{{ 'accessibility.previous_slide' | t }}">{% render 'icon-caret' %}</button>
+          <button type="button" class="slider-button slider-button--next" name="next" aria-label="{{ 'accessibility.next_slide' | t }}">{% render 'icon-caret' %}</button>
+        </div>
+      {%- endif -%}
+    </slider-component>
+    <div class="center{% if section.settings.swipe_on_mobile %} small-hide medium-hide{% endif %}">
+      {%- if section.settings.button_label != blank -%}
+        <a class="button button--primary"{% if section.settings.button_link == blank %} aria-disabled="true" role="link"{% else %} href="{{ section.settings.button_link }}"{% endif %}>
+          {{ section.settings.button_label | escape }}
+        </a>
+      {%- endif-%}
+    </div>
+  </div>
+</div>
 
 {% schema %}
-
 {
-  "name": "Icon bar",
-  "class": "icon-bar",
-  "max_blocks": 6,
+  "name": "t:sections.icon-bar.name",
+  "class": "spaced-section spaced-section--full-width",
+  "tag": "section",
   "settings": [
     {
-      "type": "checkbox",
-      "id": "show_icon_bar",
-      "label": "t:sections.icon-bar.settings.show_icon_bar.label",
-      "default": true
+      "type": "text",
+      "id": "title",
+      "default": "Icon Bar",
+      "label": "t:sections.icon-bar.settings.title.label"
     },
     {
       "type": "select",
-      "id": "alignment",
-      "label": "t:sections.icon-bar.settings.alignment.label",
+      "id": "image_width",
       "options": [
         {
-          "value": "start",
-          "label": "Left"
+          "value": "third",
+          "label": "t:sections.icon-bar.settings.image_width.options__1.label"
+        },
+        {
+          "value": "half",
+          "label": "t:sections.icon-bar.settings.image_width.options__2.label"
+        },
+        {
+          "value": "full",
+          "label": "t:sections.icon-bar.settings.image_width.options__3.label"
+        }
+      ],
+      "default": "full",
+      "label": "t:sections.icon-bar.settings.image_width.label"
+    },
+    {
+      "type": "select",
+      "id": "image_ratio",
+      "options": [
+        {
+          "value": "adapt",
+          "label": "t:sections.icon-bar.settings.image_ratio.options__1.label"
+        },
+        {
+          "value": "portrait",
+          "label": "t:sections.icon-bar.settings.image_ratio.options__2.label"
+        },
+        {
+          "value": "square",
+          "label": "t:sections.icon-bar.settings.image_ratio.options__3.label"
+        },
+        {
+          "value": "circle",
+          "label": "t:sections.icon-bar.settings.image_ratio.options__4.label"
+        }
+      ],
+      "default": "adapt",
+      "label": "t:sections.icon-bar.settings.image_ratio.label"
+    },
+    {
+      "type": "select",
+      "id": "column_alignment",
+      "options": [
+        {
+          "value": "left",
+          "label": "t:sections.icon-bar.settings.column_alignment.options__1.label"
         },
         {
           "value": "center",
-          "label": "Center"
-        },
-        {
-          "value": "end",
-          "label": "Right"
+          "label": "t:sections.icon-bar.settings.column_alignment.options__2.label"
         }
       ],
-      "default": "center"
+      "default": "left",
+      "label": "t:sections.icon-bar.settings.column_alignment.label"
     },
     {
       "type": "select",
-      "id": "icon_position",
-      "label": "t:sections.icon-bar.settings.icon_position.label",
+      "id": "background_style",
       "options": [
         {
-          "value": "row",
-          "label": "Left"
+          "value": "none",
+          "label": "t:sections.icon-bar.settings.background_style.options__1.label"
         },
         {
-          "value": "column",
-          "label": "Center"
+          "value": "primary",
+          "label": "t:sections.icon-bar.settings.background_style.options__2.label"
+        },
+        {
+          "value": "secondary",
+          "label": "t:sections.icon-bar.settings.background_style.options__3.label"
         }
       ],
-      "default": "row"
-    },
-    {
-      "type": "select",
-      "id": "size",
-      "label": "t:sections.icon-bar.settings.size.label",
-      "options": [
-        {
-          "value": "small",
-          "label": "Small"
-        },
-        {
-          "value": "medium",
-          "label": "Regular"
-        },
-        {
-          "value": "large",
-          "label": "Large"
-        }
-      ],
-      "default": "medium"
-    },
-    {
-      "type": "header",
-      "content": "Colors"
-    },
-    {
-      "type": "color",
-      "id": "background",
-      "label": "t:sections.icon-bar.settings.background.label",
-      "default": "#8B8B8B"
-    },
-    {
-      "type": "color",
-      "id": "link_color",
-      "label": "t:sections.icon-bar.settings.link_color.label",
-      "default": "#ffffff"
-    },
-    {
-      "type": "color",
-      "id": "link_hover_color",
-      "label": "t:sections.icon-bar.settings.link_hover_color.label",
-      "default": "#000000"
-    },
-    {
-      "type": "color",
-      "id": "text_color",
-      "label": "t:sections.icon-bar.settings.text_color.label",
-      "default": "#ffffff"
-    },
-    {
-      "type": "header",
-      "content": "Layout"
-    },
-    {
-      "type": "select",
-      "id": "width",
-      "label": "Width",
-      "default": "standard",
-      "options": [
-        {
-          "value": "standard",
-          "label": "Standard"
-        },
-        {
-          "value": "wide",
-          "label": "Wide"
-        }
-      ]
-    },
-    {
-      "type": "header",
-      "content": "Advanced",
-      "info": "[Learn more](https://help.outofthesandbox.com/hc/en-us/articles/360022329373)"
+      "default": "primary",
+      "label": "t:sections.icon-bar.settings.background_style.label"
     },
     {
       "type": "text",
-      "id": "css_class",
-      "label": "t:sections.icon-bar.settings.css_class.label"
+      "id": "button_label",
+      "default": "Button label",
+      "label": "t:sections.icon-bar.settings.button_label.label"
     },
     {
-      "type": "textarea",
-      "id": "custom_css",
-      "label": "t:sections.icon-bar.settings.custom_css.label"
+      "type": "url",
+      "id": "button_link",
+      "label": "t:sections.icon-bar.settings.button_link.label"
+    },
+    {
+      "type": "checkbox",
+      "id": "swipe_on_mobile",
+      "default": false,
+      "label": "t:sections.icon-bar.settings.swipe_on_mobile.label"
     }
   ],
   "blocks": [
     {
-      "type": "text",
-      "name": "Icon and text",
+      "type": "column",
+      "name": "t:sections.icon-bar.blocks.column.name",
       "settings": [
         {
           "type": "text",
-          "id": "icon",
-          "label": "t:sections.icon-bar.settings.icon.label",
-          "default": "Icon",
-          "info": "[Icon list](https://help.outofthesandbox.com/hc/en-us/articles/360021570294)"
+          "id": "icon_label",
+          "label": "t:sections.icon-bar.blocks.column.settings.icon_label.label"
         },
         {
           "type": "text",
-          "id": "text",
-          "label": "t:sections.icon-bar.settings.text.label",
-          "default": "Descriptive text"
+          "id": "title",
+          "default": "Column",
+          "label": "t:sections.icon-bar.blocks.column.settings.title.label"
         },
         {
-          "type": "url",
-          "id": "link",
-          "label": "t:sections.icon-bar.settings.link.label",
-          "info": "Optional"
+          "type": "richtext",
+          "id": "text",
+          "default": "<p>Pair text with an image to focus on your chosen product, collection, or blog post. Add details on availability, style, or even provide a review.</p>",
+          "label": "t:sections.icon-bar.blocks.column.settings.text.label"
         }
       ]
     }
   ],
- 	"presets": [
+  "presets": [
     {
-      "name": "t:sections.icon-bar.presets.name"
+      "name": "t:sections.icon-bar.presets.name",
+      "blocks": [
+        {
+          "type": "column"
+        },
+        {
+          "type": "column"
+        },
+        {
+          "type": "column"
+        }
+      ]
     }
   ]
 }
-
-
 {% endschema %}
-
-{% stylesheet %}
-{% endstylesheet %}
-
-{% javascript %}
-{% endjavascript %}
