--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -171,7 +171,7 @@
           "type": "text",
           "id": "preheading",
           "default": "Text before Heading",
-          "label": "t:sections.image-banner.blocks.heading.settings.preheading.label"
+          "label": "t:sections.image-banner.blocks.preheading.settings.preheading.label"
         }
       ]
     },
